[tool.poetry]
name = "chart_generator"
version = "0.1.0"
description = ""
authors = ["Pawel Zukowski <p.z.idlecode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.2"
google-cloud-bigquery = "^1.24.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
